# MIG

./: .gitignore  README.md  pyproject.toml  setup.cfg
configs/: valid_tag_path.json
data/: example.jsonl
eval/: eval_objective.py  eval_subjective.py
mig/: cli.py  data.py  label.py  sampler.py  version.py
xsample/: sampler.py  utils.py
